[package]
name = "spongefish-derive"
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["derive"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
spongefish = { path = "../spongefish", default-features = false, features = ["sha3"] }
