[package]
name = "spongefish-poseidon2"
edition.workspace = true
license.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
spongefish = { workspace = true }
# ark-ff = { workspace = true }
# zeroize = { workspace = true }
# ark-bls12-381 = { workspace = true, optional = true }
# ark-bn254 = { workspace = true, optional = true }
p3-poseidon2 = { workspace = true, optional = true }
p3-symmetric = { workspace = true, optional = true }
p3-koala-bear = { workspace = true, optional = true }
p3-baby-bear = { workspace = true, optional = true }
risc0-zkp = { workspace = true, optional = true }


[dev-dependencies]
# ark-bls12-381 = { workspace = true, optional = true }
# ark-ec = { workspace = true }
# ark-std = { workspace = true }
# hex = { workspace = true }
# blake2 = { workspace = true }

[features]
# arkworks
# bn254 = ["ark-bn254"]
# solinas = []
# bls12-381 = ["spongefish/ark-ec", "dep:ark-bls12-381"]
# ark-bls12-381 = ["spongefish/ark-ec", "dep:ark-bls12-381"]

# plonky3
p3-koala-bear = ["spongefish/p3-koala-bear", "dep:p3-symmetric", "dep:p3-poseidon2", "dep:p3-koala-bear"]
p3-baby-bear = ["spongefish/p3-baby-bear", "dep:p3-symmetric", "dep:p3-poseidon2", "dep:p3-baby-bear"]
risc0-zkp = ["spongefish/risc0-zkp", "dep:risc0-zkp"]
