[package]
name = "lox-distributor"
version = "0.1.0"
authors = ["The Tor Project, Inc.", "Lindsey Tulloch <onyinyang@torproject.org", "Cecylia Bocovich <cohosh@torproject.org>"]
edition = "2021"
rust-version = "1.70.0"
license = "MIT"
homepage = "https://gitlab.torproject.org/tpo/anti-censorship/lox/-/wikis/home"
description = "Tool for receving Tor bridges from rdsys and distributing them to users"
keywords = ["tor", "lox", "bridges","anti-censorship", "distributor"]
categories = ["web-programming::http-server"]
repository = "https://gitlab.torproject.org/tpo/anti-censorship/lox/-/tree/main/crates/lox-distributor"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2"
julianday = "1.2.0"
base64 = "0.22.0"
hex = "0.4.3"
hyper = { version = "1.3.1", features = ["full", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hex_fmt = "0.3"
futures = "0.3.30"
time = "0.3.36"
tokio = { version = "1", features = ["full", "macros", "signal"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "stream"]}
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_with = "3.7.0"
lox-zkp = "0.8.4"
lox-library = { path = "../lox-library", version = "0.3.0", features = ["bridgeauth", "blockage-detection"]}
lox_utils = { path = "../lox-utils", version = "0.3.0"}
rdsys_backend = { path = "../rdsys-backend-api", version = "0.2"}
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0.113"
prometheus = "0.14.0"
sled = "0.34.7"
thiserror = "1"
tempfile = "3.14.0"
prometheus-hyper = "0.2.0"

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[features]
test-branch = []
