[package]
name = "lox_utils"
version = "0.3.0"
authors = ["The Tor Project, Inc.", "Lindsey Tulloch <onyinyang@torproject.org"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
homepage = "https://gitlab.torproject.org/tpo/anti-censorship/lox/-/wikis/home"
description = "General helpers used by Lox"
keywords = ["tor", "lox", "utilities"]
categories = ["rust-patterns"]
repository = "https://gitlab.torproject.org/tpo/anti-censorship/lox.git/"

[dependencies]
base64 = "0.21.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
lox-library = {path = "../lox-library", version = "0.3.0"}
rand = "0.8.5"
serde = "1"
serde_json = "1.0.113"


[features]
full = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
