[package]
name = "lox-extensions"
version = "0.1.0"
edition = "2021"
license = "MIT"
respository = "https://gitlab.torproject.org/tpo/anti-censorship/lox/creates/lox-extensions"
description = "A reputation-based bridge distribution system that provides privacy protection to users and their social graph while remaining open to all users."
keywords = ["tor", "anti-censorship", "bridges", "reputation", "anonymity"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
aes-gcm = { version = "0.10", features = ["aes"] }
base64 = "0.21.0"
chrono = { version = "0.4.38", default-features = false, features = ["now"], optional = true }
curve25519-dalek = {version = "4.1.3", default-features = false, features = ["serde", "group", "rand_core", "digest", "precomputed-tables"] }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["serde", "rand_core"] }
rand = {version = "0.8.5", features = ["std_rng"] }
serde = "1.0.217"
serde_with = { version = "3.0.0", features = ["json"] }
sha1 = "0.10"
sha2 = "0.10.9"
subtle = "2.5"
cmz = { path = "../../../cmz" }
spongefish = { path = "../../../spongefish/spongefish", features = ["curve25519-dalek"] }
group = "0.13"
ff = "0.13.1"
bincode = "1"
thiserror = "2.0.12"
time = "0.3.36"
serde_bytes = "0.11.17"
web-time = "1.1.0"

[features]
bridgeauth = ["chrono"]
test = []
dump = []
default = ["dump"]
