[package]
name = "rdsys_backend"
authors = ["Cecylia Bocovich <cohosh@torproject.org>, Lindsey Tulloch <onyinyang@torproject.org"]
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A backend API to receive resources from rdsys"
homepage = "https://gitlab.torproject.org/tpo/anti-censorship/lox/-/wikis/home"
keywords = ["tor", "lox", "bridges","anti-censorship", "API"]
categories = ["api-bindings", "encoding"]
repository = "https://gitlab.torproject.org/tpo/anti-censorship/lox/-/tree/main/crates/rdsys-backend-api"
readme = "README.md"


[dependencies]
serde_json = "1"
futures-util = { version = "0.3.30"}
serde = { version = "1", features = ["derive"]}
bytes = "1"
hex = "0.4.3"
crc64 = "2.0.0"
sha1 = "0.10.6"
tokio = { version = "1", features = ["full", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream"]}
tokio-stream = "0.1.15"
futures = "0.3.30"
tokio-util = "0.7.10"
chrono = { version = "0.4.38", features = ["serde", "clock"] }
